# n-orm

./: Cargo.toml  cspell.json  flake.nix
collection/: Cargo.toml
collection-macro/: Cargo.toml
collection-macro/src/: lib.rs
collection/collection-macro/: Cargo.toml
collection/collection-macro/src/: lib.rs
collection/src/: lib.rs
profile/: Cargo.toml
profile/src/: lib.rs
src/: lib.rs  main.rs
syn-state-machine/: Cargo.toml
syn-state-machine/src/: common_tokens.rs  impls.rs  lib.rs
syn-state-machine/src/common_tokens/: associate_items.rs  attr.rs  bounds.rs  constant_items.rs  enumerations.rs  expr.rs  extern_crate.rs  function_pointer_types.rs  functions.rs  generic_args.rs  genetic_params.rs  identifier.rs  impl_dyn_trait.rs  implementatins.rs  implementations.rs  keyword.rs  lifetime.rs  macro_invocation.rs  modules.rs  path.rs  patterns.rs  static_items.rs  structs.rs  traits.rs  type_alias.rs  types.rs  unions.rs  use_declarations.rs  visability.rs  visibility.rs  where_clause.rs
syn-state-machine/src/impls/: and_not.rs  box.rs  either.rs  flat_either.rs  grouping.rs  ident.rs  interlace.rs  literal.rs  map.rs  option.rs  punct.rs  sum.rs  terminate.rs  token_tree.rs  tuple.rs  typed_literal.rs  vec.rs  with_min_length.rs
syn-state-machine/src/snapshots/: syn_state_machine__common_tokens__external_blocks__tests__it_matches_item.snap  syn_state_machine__common_tokens__external_blocks__tests__it_matches_simple_extern_block.snap  (+3 more)
syn-state-machine/syn-state-machine-macro/: Cargo.toml
syn-state-machine/syn-state-machine-macro/src/: lib.rs
(+90 files in other folders)
