[package]
name = "n-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
profile = { path = "./profile" }
collection-macro = { path = "./collection-macro" }
mongodb = "2.3"
thiserror = "1"


