[package]
name = "n-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[workspace]
members = [
    "collection/collection-macro",
    "collection",
    "profile",
    "syn-state-machine",
    "syn-state-machine/syn-state-machine-macro",
]

[dependencies]
profile = { path = "./profile" }
collection = { path = "./collection" }
mongodb = "2.3"
thiserror = "1"
serde = { version = "1", features = [ "derive" ] }


